@@ -277,3 +277,4 @@ Revision	Version Updated		Log Message
 255		C++			Limit factory allocation to 10 nations (plus those tied for tenth)
 256		C++			Determine EU3 save type dynamically.  Currently unused, but could eliminate the need for multiple build targets.
 257		C++			Create states earlier in the conversion process so we can use state data for pops.
+258		C++			Place bureaucrat, aristocrat, and capitalist pops in state capitals only.
